# 2DCopterGame

./: CMakeLists.txt  LICENSE  README.md
assets/: CMakeLists.txt
assets/scripts/: Level1.lua
lib/: CMakeLists.txt
lib/lua/: CMakeLists.txt
src/: Animation.cpp  Animation.hpp  AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  Collision.cpp  Collision.hpp  Component.hpp  Constants.h  Constants.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  FontManager.cpp  FontManager.hpp  Game.cpp  Game.h  Game.hpp  Map.cpp  Map.hpp  TextureManager.cpp  TextureManager.hpp  TransformComponent.hpp  main.cpp
src/components/: CMakeLists.txt  ColliderComponent.hpp  KeyboardControlComponent.hpp  ProjectileEmitterComponent.hpp  SpirteComponent.hpp  SpriteComponent.hpp  TextLabelComponent.hpp  TileComponent.hpp  TransformComponent.hpp
